# exch

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.unittest.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  setup.py  test.txt
.github/workflows/: action.yml  django.yml
alembic/: env.py
alembic/versions/: 2024-02-21:f1e2861a758c_initial.py
core/: __init__.py  config.py
src/: __init__.py  database.py  exch.py  schemas.py
src/api/: __init__.py  api.py  rates.py
src/db/: __init__.py  db_session.py  rates.py
src/repositories/: __init__.py  rates.py
src/services/: __init__.py
src/usecases/: __init__.py  convert.py  get_rates.py  set_rates.py
src/validators/: __init__.py  symbols.py
tests/: conftest.py  fixtures.py  setup.py  test_convert_rates.py  test_set_rates.py
